# lanime

./: Cargo.toml  README.md
crates/lanime_animation/: Cargo.toml
crates/lanime_animation/src/: lib.rs
crates/lanime_bindfields/: Cargo.toml
crates/lanime_bindfields/macros/: Cargo.toml
crates/lanime_bindfields/macros/src/: lib.rs
crates/lanime_bindfields/src/: lib.rs
crates/lanime_core/: Cargo.toml
crates/lanime_core/src/: as_any.rs  bindable_field.rs  context.rs  lib.rs  node.rs  res.rs  scene.rs  transform.rs
crates/lanime_core/src/layout/: mod.rs  transform.rs
crates/lanime_core/src/nodes/: mod.rs  rectangle.rs  resource.rs
crates/lanime_core/src/res/: closure.rs  mod.rs  staticc.rs
crates/lanime_curves/: Cargo.toml
crates/lanime_curves/macros/: Cargo.toml
crates/lanime_curves/macros/src/: lib.rs
crates/lanime_curves/src/: cubic.rs  lib.rs  linear.rs  point.rs  quadratic.rs
crates/lanime_graph/: Cargo.toml
crates/lanime_graph/src/: lib.rs  post_order_dfs.rs
crates/lanime_nodes/: Cargo.toml
crates/lanime_nodes/src/: lib.rs  render.rs  text.rs
crates/lanime_renderer/: Cargo.toml
crates/lanime_renderer/src/: camera.rs  camera_controller.rs  context.rs  lib.rs  shader.wgsl  texture.rs
crates/lanime_timeline/: Cargo.toml
crates/lanime_timeline/src/: clip.rs  clip_metadata.rs  lib.rs  sorted_list.rs  track.rs
examples/: playground.rs
src/: lib.rs  main.rs
