[package]
name = "lanime_renderer"
version = "0.1.0"
edition = "2021"

[dependencies]
lanime_core = { path = "../lanime_core" }

anyhow = "1.0.69"
bytemuck = { version = "1.12", features = [ "derive" ] }
cgmath = "0.18.0"
env_logger = "0.10.0"
image = { version = "0.24.5", default-features = false, features = ["png"] }
log = "0.4.17"
wgpu = "0.15.1"
winit = "0.28.2"
